各種申請機能を実装

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=ca0583f0a820e1261459240a22770942",
+    "/css/app.css": "/css/app.css?id=1ba4616002e30d600ff3f664161ff848"
 }
