--- a/.env.example
+++ b/.env.example
@@ -50,7 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-ENABLE_EDIT_ATTENDANCE=true
+
+# 出勤・退勤時刻の編集を許可するか
+ENABLE_EDIT_ATTENDANCE=false
 
 # 勤怠情報管理のリスト表示を有効にするか
 ENABLE_LIST_VIEW=true
